--- a/src/style.scss
+++ b/src/style.scss
@@ -4,9 +4,28 @@ body {
 }
 
 .hello {
+  font-size: large;
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
   padding: 0.4rem;
   color: red;
+}
+
+button {
+  font-weight: 700;
+  color: #fff;
+  background-color: #f00;
+  border: solid #f00 0.2rem;
+  border-radius: 0.4rem;
+  width: 70%;
+  font-size: 1rem;
+  padding: 0.5rem;
+  align-self: center;
+  cursor: pointer;
+}
+
+button:hover {
+  color: #f00;
+  background-color: #fff;
 }
