--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+body ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .hello {
