--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,14 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .hello {
