--- a/src/test.css
+++ b/src/test.css
@@ -14,7 +14,7 @@ body ul {
 }
 
 .to-do-container {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin: 1rem 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -37,7 +37,6 @@ body ul {
 }
 
 .to-do-container .to-do-header .to-do-header-title {
-  font-size: 1.4rem;
   text-align: left;
   padding: 0.4rem 0.4rem;
 }
@@ -63,8 +62,12 @@ body ul {
   border-bottom: 1px solid #ddd;
 }
 
+.to-do-container .add-new input {
+  font-size: 1.2rem;
+  font-style: italic;
+}
+
 .to-do-container .add-new .add-new-field {
-  font-size: 1.4rem;
   padding: 0.4rem 0.4rem;
   padding: 0.4rem 0.4rem;
   outline: none;
@@ -137,16 +140,12 @@ body ul {
 
 .to-do-container ul li .checked {
   color: #00c;
-  font-size: 2.4rem;
+  font-size: 2rem;
   -webkit-transform: rotate(135deg);
           transform: rotate(135deg);
-  -webkit-transform-origin: 105% 105%;
-          transform-origin: 105% 105%;
+  -webkit-transform-origin: 90% 90%;
+          transform-origin: 90% 90%;
   cursor: pointer;
-  text-align: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
 }
 
 .to-do-container ul li .checked::before {
@@ -184,7 +183,6 @@ body ul {
 }
 
 .to-do-container ul li .delete-btn {
-  font-size: 1.6rem;
   cursor: pointer;
   text-align: center;
   -webkit-box-align: start;
@@ -201,7 +199,6 @@ button {
   background-color: #f5f5f5;
   border: none;
   width: 100%;
-  font-size: 1rem;
   padding: 1rem;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
@@ -216,7 +213,6 @@ button:hover {
 }
 
 .hello {
-  font-size: large;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
