--- a/src/test.scss
+++ b/src/test.scss
@@ -12,7 +12,7 @@ body {
 }
 
 .to-do-container {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   margin: 1rem 4rem;
   display: flex;
   flex-direction: column;
@@ -23,7 +23,7 @@ body {
     padding: 0.4rem 0.4rem;
     border-bottom: 1px solid #ddd;
     .to-do-header-title {
-      font-size: 1.4rem;
+      // font-size: 1.4rem;
       text-align: left;
       // margin: 0.4rem;
       padding: 0.4rem 0.4rem;
@@ -47,8 +47,12 @@ body {
     grid-template-columns: auto 2.5rem;
     padding: 0.4rem 0.4rem;
     border-bottom: 1px solid #ddd;
+    input {
+      font-size: 1.2rem;
+      font-style: italic;
+    }
     .add-new-field {
-      font-size: 1.4rem;
+      // font-size: 1.4rem;
       padding: 0.4rem 0.4rem;
       // color: #888;
       padding: 0.4rem 0.4rem;
@@ -95,12 +99,12 @@ body {
       }
       .checked {
         color: #00c;
-        font-size: 2.4rem;
+        font-size: 2rem;
         transform: rotate(135deg);
-        transform-origin: 105% 105%;
+        transform-origin: 90% 90%;
         cursor: pointer;
-        text-align: center;
-        align-items: flex-start;
+        // text-align: center;
+        // align-items: flex-start;
       }
       .checked::before {
         content: "¬";
@@ -132,7 +136,7 @@ body {
         content: "⁝";
       }
       .delete-btn {
-        font-size: 1.6rem;
+        // font-size: 1.6rem;
         cursor: pointer;
         text-align: center;
         align-items: flex-start;
@@ -151,7 +155,7 @@ button {
   border: none;
   // border-radius: 0.4rem;
   width: 100%;
-  font-size: 1rem;
+  // font-size: 1rem;
   padding: 1rem;
   align-self: center;
   cursor: pointer;
@@ -164,7 +168,7 @@ button:hover {
 }
 
 .hello {
-  font-size: large;
+  // font-size: large;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
